# haskell-programming

./: .gitignore  README.md  haskell-programming.cabal  run
projects/chapter17/: chapter17.cabal
projects/chapter17/src/: Applicatives.hs  BadMonoid.hs  ZipListMonoid.hs
projects/chapter17/test/: ApplicativesSpec.hs
projects/chapter18/: chapter18.cabal
projects/chapter18/src/: BadMonad.hs  Monads.hs
projects/chapter18/test/: MonadsSpec.hs
projects/chapter20/: chapter20.cabal
projects/chapter20/src/: Foldable.hs
projects/chapter20/test/: FoldableSpec.hs
projects/chapter21/: chapter21.cabal
projects/chapter21/src/: Traversable.hs
projects/chapter21/test/: TraversableSpec.hs
projects/chapter22/: chapter22.cabal  stack.yaml
projects/chapter22/src/: Reader.hs  ReaderPractice.hs
projects/chapter22/test/: ReaderSpec.hs
src/: Chapter06Typeclasses.hs  Chapter09Lists.hs  Chapter10FoldingLists.hs  Chapter11Datatypes.hs  Chapter12Adversity.hs  Chapter14Morse.hs  Chapter14Testing.hs  Chapter15Monoids.hs  Chapter15Semigroups.hs  Chapter16Functors.hs  Chapter17Applicatives.hs  Cipher.hs
test/: Chapter06TypeclassesSpec.hs  Chapter09ListsSpec.hs  Chapter10FoldingListsSpec.hs  Chapter11DatatypesSpec.hs  Chapter12AdversitySpec.hs  Chapter14MorseSpec.hs  Chapter14TestingSpec.hs  Chapter15MonoidsSpec.hs  Chapter15SemigroupsSpec.hs  Chapter16FunctorsSpec.hs  CipherSpec.hs
