name:              haskell-programming
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

executable haskell-programming
  main-is:         HaskellProgramming.hs
  hs-source-dirs:  src
  default-language:Haskell2010
  other-modules:   Timer
  build-depends:   base,
                   haskell-programming

library
  ghc-options:     -Wall
  exposed-modules: Chapter06Typeclasses,
                   Chapter09Lists,
                   Chapter10FoldingLists,
                   Cipher,
                   Chapter11Datatypes,
                   Chapter12Adversity,
                   Chapter14Morse,
                   Chapter14Testing,
                   Chapter15Monoids,
                   Chapter15Semigroups,
                   Chapter16Functors
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   mtl,
                   QuickCheck,
                   recursion-schemes,
                   data-ordlist,
                   time,
                   containers,
                   semigroups

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   Chapter06TypeclassesSpec,
                   Chapter09ListsSpec,
                   Chapter10FoldingListsSpec,
                   CipherSpec,
                   Chapter11DatatypesSpec,
                   Chapter12AdversitySpec,
                   Chapter14MorseSpec,
                   Chapter14TestingSpec,
                   Chapter15MonoidsSpec,
                   Chapter15SemigroupsSpec,
                   Chapter16FunctorsSpec
  build-depends:   base,
                   haskell-programming,
                   hspec,
                   mtl,
                   QuickCheck,
                   time,
                   containers,
                   semigroups
