name:              chapter17
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules: Applicatives,
                   BadMonoid,
                   ZipListMonoid
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   QuickCheck,
                   checkers
