name:              chapter17
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules: Applicatives,
                   BadMonoid,
                   ZipListMonoid
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base,
                   QuickCheck,
                   checkers

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   ApplicativesSpec
  build-depends:   base,
                   hspec,
                   QuickCheck,
                   checkers,
                   chapter17
