name:              chapter20
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules: Foldable
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   FoldableSpec
  build-depends:   base,
                   hspec,
                   chapter20
