name:              chapter21
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.10

library
  exposed-modules: Traversable
  hs-source-dirs:  src
  default-language:Haskell2010
  build-depends:   base

test-suite spec
  main-is:         Spec.hs
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  default-language:Haskell2010
  other-modules:   TraversableSpec
  build-depends:   base,
                   hspec,
                   chapter21
